--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --browsers=ChromeHeadlessCI --codeCoverage=true --watch=true",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
