--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,10 @@ services:
     restart: unless-stopped
     volumes:
       - "./src:/usr/src/app/src"
+    networks:
+      - dailytrends_front
     command: sh -c "$$(npm bin)/ng serve --host 0.0.0.0 --port ${APP_PORT}"
+networks:
+  dailytrends_front:
+    external:
+      name: dailytrends
